# code_repo

./: .gitignore  01.scala  02.scala  03.scala  04.scala  05.scala  06.scala  07.scala  08.sql  09.scala  10.scala  11.scala  12.sql  13.scala  14.scala  15.scala  PowerShell.ps1  README.md  arrays_csharp.cs  code_repo.code-workspace  conditional_SELECT.sql  copy_sql_to_csv.cs  csharp_template.cs  dateadd_datediff.sql  drop_table_view.sql  dynamic_excel_load.cs  first_value_row_number.sql  friday_Sales.sql  left_join_on_and.sql  modify_data  pivot.sql  print_all_tables_in_all_dbs.sql  sql_code_unpivot.sql  sql_iteration.sql  sql_nested_if.sql
AzureDataFactory/: adf_expressions.txt  psudocoding.txt
AzureDevOps/: azure_devops_links.txt  deploying adf to various env  fabric_implementation.docx  pipeline.yaml  sql_dacpac_snapshot_with_azure_devops.sql
Docker/: compose.yaml
Docker vs dbt vs kubernetes/: dbt Fabric Guide.docx
KQL/: azureDB.kql
PowerBI/: RLS in PBI.txt
PowerShell/: FPathPlay.ps1  GuestEmailUpdate.csv  New Text Document.txt  adding_ip.ps1  azEmailUpdate.ps1  azureVM.ps1  azureVMcopy.ps1  azuredevops access.txt  file.txt  how to execute sleep file.txt  if_else.ps1  important_ps.ps1  no sleep.ps1  renaming_file.ps1  test_app.ps1  using service principle.txt
Pyspark and Lakehouse/: DP700_PySpark_DeepDive.ipynb  databricks pipeline.py  optimize.py  (+2 more)
Python/LinGinApp/: linginapp guide.txt  pyproject.toml
Python/LinGinApp/SihanLinGin/: SihanLinGinApp.py  SihanProAdvanced.yaml  filtered_dlin.html  layout.py  lineage.html  tableSearch.py  trigger_lineage.py
(+176 files in other folders)
