[project]
name = "sihan-lineage"
version = "0.2.0"
description = "Data Lineage App using Streamlit + FAISS + SQLAlchemy + LangChain"
requires-python = ">=3.10"
authors = [{ name = "Sibbir Sihan" }]

dependencies = [
    "streamlit"
    "PyYAML"
    "pyvis"
    "requests"
]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "black",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
